--- a/src-client/package.json
+++ b/src-client/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "strongly-typed-events": "^3.0.3"
+    "strongly-typed-events": "^3.0.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
